--- a/SocialMediaProtection/pom.xml
+++ b/SocialMediaProtection/pom.xml
@@ -30,6 +30,15 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
 		<!-- http://mvnrepository.com/artifact/com.restfb/restfb -->
 
 		<dependency>
@@ -37,7 +46,11 @@
 			<artifactId>restfb</artifactId>
 			<version>2.18.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
