--- a/middleware/pom.xml
+++ b/middleware/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>SocidiaMiddleware</groupId>
 	<artifactId>server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>socidia-middleware</name>
+	<description>A project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
