--- a/middleware/src/main/resources/application.properties
+++ b/middleware/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8081
+server.servlet.context-path=/middleware
+
 # MySQL setting
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=update
@@ -6,11 +9,11 @@ spring.datasource.username=csnp
 spring.datasource.password=capstone
 
 # Email Sender Configuration
-spring.mail.host = smtp.gmail.com
-spring.mail.username = capstonesocidia@gmail.com
-spring.mail.password = capstone2019
-spring.mail.port=587
+spring.mail.host=smtp.gmail.com
+spring.mail.username=capstonesocidia@gmail.com
+spring.mail.password=capstone2019
+spring.mail.port= 587
 spring.mail.properties.mail.smtp.starttls.enable = true
 
-spring.mvc.view.prefix = /views/
-spring.mvc.view.suffix = .html
+spring.mvc.view.prefix= /views/
+spring.mvc.view.suffix= .html
