delete context path

--- a/middleware/src/main/resources/application.properties
+++ b/middleware/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-server.servlet.context-path=/middleware
+#server.servlet.context-path=/middleware
 
 # MySQL setting
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
