--- a/middleware/src/main/resources/application.properties
+++ b/middleware/src/main/resources/application.properties
@@ -1,19 +1,44 @@
-server.port=8081
+#server.port=8081
 #server.servlet.context-path=/middleware
 
 # MySQL setting
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://csnp.cbq324qpyo4s.us-east-1.rds.amazonaws.com/CSNP
 spring.datasource.username=csnp
 spring.datasource.password=capstone
 
 # Email Sender Configuration
+support.email=socidia@gmail.com
 spring.mail.host=smtp.gmail.com
 spring.mail.username=capstonesocidia@gmail.com
 spring.mail.password=capstone2019
 spring.mail.port= 587
 spring.mail.properties.mail.smtp.starttls.enable = true
 
-spring.mvc.view.prefix= /views/
+#spring.mvc.view.prefix= /views/
 spring.mvc.view.suffix= .html
+
+# facebook app ID
+#spring.social.facebook.appId = 2012538558997923
+# facebook app secret
+#spring.social.facebook.appSecret = b5ce062be32de85fd755a0e111190eb6
+
+spring.social.facebook.appId = 317505622396859
+spring.social.facebook.appSecret = ddcea8d981d76c14aa34b8957a8e0262
+
+server.port=8443
+
+# The format used for the keystore.
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/capstone.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=123456
+# The alias mapped to the certificate
+server.ssl.key-alias=baeldung
+
+#trust store location
+trust.store=classpath:keystore/capstone.p12
+#trust store password
+trust.store.password=123456
