add revoke authorization add column phone_num in user etc

--- a/middleware/src/main/resources/application.properties
+++ b/middleware/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.social.facebook.appId = 317505622396859
 spring.social.facebook.appSecret = ddcea8d981d76c14aa34b8957a8e0262
 
 server.port=8443
+server.homepage=https://localhost:8443/
 
 # The format used for the keystore.
 server.ssl.key-store-type=PKCS12
