--- a/middleware/pom.xml
+++ b/middleware/pom.xml
@@ -97,6 +97,20 @@
 			<artifactId>spring-social-config</artifactId>
 			<version>2.0.0.M2</version>
 		</dependency>
+
+		<!--mockito-->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.21.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180813</version>
+		</dependency>
 	</dependencies>
 
 	<build>
