--- a/SocialMediaProtection/pom.xml
+++ b/SocialMediaProtection/pom.xml
@@ -50,6 +50,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-safebrowsing</artifactId>
+			<version>v4-rev100-1.25.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
