modify self-signed certificate

--- a/middleware/src/main/resources/application.properties
+++ b/middleware/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.mail.port= 587
 spring.mail.properties.mail.smtp.starttls.enable = true
 
 #spring.mvc.view.prefix= /views/
-spring.mvc.view.suffix= .html
+#spring.mvc.view.suffix= .html
 
 # facebook app ID
 #spring.social.facebook.appId = 2012538558997923
@@ -33,13 +33,8 @@ server.homepage=https://localhost:8443/
 # The format used for the keystore.
 server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/capstone.p12
+server.ssl.key-store=classpath:keystore/keystore.p12
 # The password used to generate the certificate
-server.ssl.key-store-password=123456
+server.ssl.key-store-password=mypassword
 # The alias mapped to the certificate
-server.ssl.key-alias=baeldung
-
-#trust store location
-trust.store=classpath:keystore/capstone.p12
-#trust store password
-trust.store.password=123456
+server.ssl.key-alias=tomcat
