modify keystore file location

--- a/SocialMediaProtection/src/main/resources/application.properties
+++ b/SocialMediaProtection/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=csnp
 spring.datasource.password=capstone
 
 server.port=8888
-server.ssl.key-store=keystore.p12
+server.ssl.key-store=classpath:keystore/keystore.p12
 server.ssl.key-store-password=mypassword
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
