replace localhost to production IP

--- a/middleware/src/main/resources/application.properties
+++ b/middleware/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-#server.port=8081
-#server.servlet.context-path=/middleware
 
 # MySQL setting
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -16,9 +14,6 @@ spring.mail.password=capstone2019
 spring.mail.port= 587
 spring.mail.properties.mail.smtp.starttls.enable = true
 
-#spring.mvc.view.prefix= /views/
-#spring.mvc.view.suffix= .html
-
 # facebook app ID
 #spring.social.facebook.appId = 2012538558997923
 # facebook app secret
@@ -28,7 +23,7 @@ spring.social.facebook.appId = 317505622396859
 spring.social.facebook.appSecret = ddcea8d981d76c14aa34b8957a8e0262
 
 server.port=8443
-server.homepage=https://localhost:8443/
+server.homepage=https://35.175.225.202:8443/
 
 # The format used for the keystore.
 server.ssl.key-store-type=PKCS12
